[gd_scene load_steps=2 format=3 uid="uid://bsiehikksicqh"]

[ext_resource type="Script" path="res://ui/menus/gameplay/game_over_menu/game_over_menu.gd" id="1_of4n2"]

[node name="GameOverMenu" type="CanvasLayer" groups=["game_over_menu"]]
process_mode = 3
layer = 10
visible = false
script = ExtResource("1_of4n2")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT TO MENU"

[connection signal="mouse_entered" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
